feat: implement getConflictFiles method